--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -1,14 +1,15 @@
-name: Run YouTube Checker Every 30 Minutes
+name: Fetch Latest YouTube Video
 
 on:
+  push:
+    branches:
+      - main
   schedule:
-    - cron: "*/5 * * * *"  # Runs every 30 minutes
-  workflow_dispatch:  # Allows manual trigger
+    - cron: "*/5 * * * *"  # Runs every hour
 
 jobs:
-  run_script:
+  fetch-latest-video:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -16,12 +17,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.9'
 
       - name: Install dependencies
-        run: pip install google-api-python-client
+        run: |
+          pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run script
-        env:
-          API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         run: python script.py
