--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -1,15 +1,14 @@
-name: Fetch Latest YouTube Video
+name: Run YouTube Checker Every 30 Minutes
 
 on:
-  push:
-    branches:
-      - main
   schedule:
-    - cron: "*/5 * * * *"  # Runs every hour
+    - cron: "*/5 * * * *"  # Runs every 30 minutes
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
-  fetch-latest-video:
+  run_script:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -17,12 +16,14 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install google-api-python-client
 
       - name: Run script
+        env:
+          API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         run: python script.py
