--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -1,38 +1,4 @@
-name: Check YouTube for New Videos
-
-on:
-  schedule:
-    - cron: "*/30 * * * *"
-  workflow_dispatch:
-
-jobs:
-  run_script:
-    runs-on: ubuntu-latest
-
-    outputs:
-      video_id: ${{ steps.run_python.outputs.video_id }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install google-api-python-client
-
-      - name: Run Python Script
-        id: run_python
-        env:
-          API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
-        run: echo "video_id=$(python script.py)" >> $GITHUB_OUTPUT
-
-  check_for_changes:
+check_for_changes:
     runs-on: ubuntu-latest
     needs: run_script
     if: ${{ needs.run_script.outputs.video_id != '' }}
@@ -56,13 +22,16 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            await github.rest.actions.updateRepoVariable({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: 'PREVIOUS_VIDEO_ID',
-              value: process.env.PREVIOUS_VIDEO_ID
-            });
-          retries: 3
-          result-encoding: string
+            await (async () => {
+              const { Octokit } = require("@octokit/rest");
+              const octokit = new Octokit({ auth: "${{ secrets.GITHUB_TOKEN }}" });
+
+              await octokit.rest.actions.updateRepoVariable({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                name: 'PREVIOUS_VIDEO_ID',
+                value: process.env.PREVIOUS_VIDEO_ID
+              });
+            })();
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          octokit-rest-version: ">=5.0.0"
+          node-version: '16' # or higher
