--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -52,13 +52,25 @@ jobs:
       - name: Set new variable
         run: |
           echo "PREVIOUS_VIDEO_ID=${{ needs.run_script.outputs.video_id }}" >> $GITHUB_ENV
+
+      - name: Install @octokit/rest
+        run: |
+          npm install @octokit/rest
+
       - name: Update Variable
         uses: actions/github-script@v6
         with:
           script: |
-            await github.rest.actions.updateRepoVariable({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              name: 'PREVIOUS_VIDEO_ID',
-              value: process.env.PREVIOUS_VIDEO_ID
-            });
+            await (async () => {
+              const { Octokit } = require("@octokit/rest");
+              const octokit = new Octokit({ auth: "${{ secrets.GITHUB_TOKEN }}" });
+
+              await octokit.rest.actions.updateRepoVariable({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                name: 'PREVIOUS_VIDEO_ID',
+                value: process.env.PREVIOUS_VIDEO_ID
+              });
+            })();
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          node-version: '16' # or higher
