--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -29,47 +29,10 @@ jobs:
       - name: Run Python Script
         id: run_python
         env:
-          API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
-        run: echo "video_id=$(python script.py)" >> $GITHUB_OUTPUT
+          API_KEY: <span class="math-inline">\{\{ secrets\.YOUTUBE\_API\_KEY \}\}
+run\: echo "video\_id\=</span>(python script.py)" >> $GITHUB_OUTPUT
 
   check_for_changes:
     runs-on: ubuntu-latest
     needs: run_script
-    if: ${{ needs.run_script.outputs.video_id != '' }}
-
-    steps:
-      - name: Check previous video id
-        run: |
-          PREVIOUS_VIDEO_ID="${{ vars.PREVIOUS_VIDEO_ID }}"
-          LATEST_VIDEO_ID="${{ needs.run_script.outputs.video_id }}"
-
-          if [[ "$LATEST_VIDEO_ID" != "$PREVIOUS_VIDEO_ID" ]]; then
-            echo "New video detected!"
-          else
-            echo "No new video detected."
-          fi
-
-      - name: Set new variable
-        run: |
-          echo "PREVIOUS_VIDEO_ID=${{ needs.run_script.outputs.video_id }}" >> $GITHUB_ENV
-
-      - name: Install @octokit/rest
-        run: |
-          npm install @octokit/rest
-
-      - name: Update Variable
-        uses: actions/github-script@v6
-        with:
-          script: |
-            await (async () => {
-              const { Octokit } = await import("@octokit/rest");
-              const octokit = new Octokit({ auth: "${{ secrets.GITHUB_TOKEN }}" });
-
-              await octokit.rest.actions.updateRepoVariable({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                name: 'PREVIOUS_VIDEO_ID',
-                value: process.env.PREVIOUS_VIDEO_ID
-              });
-            })();
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+    if: ${{ needs.run_script.outputs.
