--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -36,6 +36,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: run_script
     if: ${{ needs.run_script.outputs.video_id != '' }}
+    permissions:
+      actions: write
 
     steps:
       - name: Check previous video id
