--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -8,10 +8,8 @@ on:
 jobs:
   run_script:
     runs-on: ubuntu-latest
-
-    outputs:
-      video_id: ${{ steps.run_python.outputs.video_id }}
-
+    permissions:
+      actions: read #required to get the repository name.
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -24,50 +22,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install google-api-python-client
+          pip install google-api-python-client requests
 
       - name: Run Python Script
-        id: run_python
         env:
           API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
-        run: echo "video_id=$(python script.py)" >> $GITHUB_OUTPUT
-
-  check_for_changes:
-    runs-on: ubuntu-latest
-    needs: run_script
-    if: ${{ needs.run_script.outputs.video_id != '' }}
-    permissions:
-      actions: write
-
-    steps:
-      - name: Check previous video id
-        run: |
-          PREVIOUS_VIDEO_ID="${{ vars.PREVIOUS_VIDEO_ID }}"
-          LATEST_VIDEO_ID="${{ needs.run_script.outputs.video_id }}"
-
-          if [[ "$LATEST_VIDEO_ID" != "$PREVIOUS_VIDEO_ID" ]]; then
-            echo "New video detected!"
-          else
-            echo "No new video detected."
-          fi
-
-      - name: Set new variable
-        run: |
-          echo "PREVIOUS_VIDEO_ID=${{ needs.run_script.outputs.video_id }}" >> $GITHUB_ENV
-
-      - name: Install @octokit/rest
-        run: |
-          npm install @octokit/rest
-
-      - name: Update Variable
-        run: |
-          npx -p @octokit/rest node --input-type=module <<EOF
-            import { Octokit } from "@octokit/rest";
-            const octokit = new Octokit({ auth: "${{ secrets.GITHUB_TOKEN }}" });
-            await octokit.rest.actions.updateRepoVariable({
-              owner: "${{ github.repository_owner }}",
-              repo: "${{ github.event.repository.name }}",
-              name: "PREVIOUS_VIDEO_ID",
-              value: process.env.PREVIOUS_VIDEO_ID
-            });
-          EOF
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+        run: python script.py
