--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Run Python Script
         env:
           API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.ACTIONS_PAT }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: python script.py
