--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -32,4 +32,5 @@ jobs:
           API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.CODE_TOKEN }}
           GITHUB_REPOSITORY: ${{ secrets.CODE_REPOSITORY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python script.py
