--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 google-api-python-client
 google-generativeai
-google-api-python-client requests google-generativeai pytube
+requests
+google-generativeai
+pytube
