--- a/.github/workflows/run_youtube_checker.yml
+++ b/.github/workflows/run_youtube_checker.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install subprocess google-api-python-client requests google-generativeai facebook-business openai-whisper
+          pip install google-api-python-client requests google-generativeai facebook-business openai-whisper
 
       - name: Run Python Script
         env:
